[gd_scene load_steps=35 format=2]

[ext_resource path="res://pck/assets/common/profiles/0.png" type="Texture" id=1]
[ext_resource path="res://pck/assets/common/panel-1.png" type="Texture" id=2]
[ext_resource path="res://pck/scripts/button.gd" type="Script" id=3]
[ext_resource path="res://pck/assets/common/profile-frame.png" type="Texture" id=4]
[ext_resource path="res://pck/assets/shankoemee/profile-panel.png" type="Texture" id=5]
[ext_resource path="res://pck/assets/skm_bet/bet6.png" type="Texture" id=6]
[ext_resource path="res://pck/assets/skm_bet/bet2.png" type="Texture" id=7]
[ext_resource path="res://pck/assets/skm_bet/bet4.png" type="Texture" id=8]
[ext_resource path="res://pck/assets/skm_bet/bet3.png" type="Texture" id=9]
[ext_resource path="res://pck/assets/audio/coin_move_1.mp3" type="AudioStream" id=10]
[ext_resource path="res://pck/assets/skm_bet/bet5.png" type="Texture" id=12]
[ext_resource path="res://pck/assets/skm_bet/select-circle.png" type="Texture" id=13]
[ext_resource path="res://pck/assets/dragon_tiger_bet/history_bar.png" type="Texture" id=14]
[ext_resource path="res://pck/assets/skm_bet/bet1.png" type="Texture" id=15]
[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://pck/assets/common/joystick.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://pck/assets/dragon_tiger_bet/timer.png" type="Texture" id=18]
[ext_resource path="res://pck/assets/dragon_tiger_bet/bg.jpg" type="Texture" id=21]
[ext_resource path="res://pck/assets/common/btn-exit.png" type="Texture" id=25]
[ext_resource path="res://pck/scenes/tiger_dragon_bet_game.gd" type="Script" id=29]
[ext_resource path="res://pck/prefabs/BackDrop.tscn" type="PackedScene" id=30]
[ext_resource path="res://pck/assets/common/cards/back.png" type="Texture" id=31]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, -10, 200, 210 )
margin_left = 60.0
margin_right = 60.0
margin_top = 80.0
margin_bottom = 60.0

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("C1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 938, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("C1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -131.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("C2:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1116, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("C2:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -131.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("C1:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("C1:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("C1:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("C1:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("C2:modulate:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("C2:modulate:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("C2:modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("C2:modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
resource_name = "in"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("C1:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -131.1, -0.25, 0, 0.25, 0, 228.9, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("C2:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -131.1, -0.25, 0, 0.25, 0, 228.9, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("C1:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("C2:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1.5 )
}

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.784314, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=12]
resource_name = "play"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.784314, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="root" type="Node"]
script = ExtResource( 29 )
__meta__ = {
"_edit_vertical_guides_": [ 1000.0 ]
}

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 1000, 450 )
texture = ExtResource( 21 )

[node name="BetSelect" type="Node" parent="."]

[node name="Select" type="Sprite" parent="BetSelect"]
position = Vector2( 738, 834 )
texture = ExtResource( 13 )

[node name="0" type="TextureButton" parent="BetSelect"]
margin_left = 688.0
margin_top = 784.0
margin_right = 788.0
margin_bottom = 884.0
texture_normal = ExtResource( 15 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="BetSelect/0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1

[node name="1" type="TextureButton" parent="BetSelect"]
margin_left = 792.0
margin_top = 784.0
margin_right = 892.0
margin_bottom = 884.0
texture_normal = ExtResource( 7 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="BetSelect/1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "500"
align = 1
valign = 1

[node name="2" type="TextureButton" parent="BetSelect"]
margin_left = 896.0
margin_top = 784.0
margin_right = 996.0
margin_bottom = 884.0
texture_normal = ExtResource( 9 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="BetSelect/2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "1K"
align = 1
valign = 1

[node name="3" type="TextureButton" parent="BetSelect"]
margin_left = 1000.0
margin_top = 784.0
margin_right = 1100.0
margin_bottom = 884.0
texture_normal = ExtResource( 8 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="BetSelect/3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "2K"
align = 1
valign = 1

[node name="4" type="TextureButton" parent="BetSelect"]
margin_left = 1104.0
margin_top = 784.0
margin_right = 1204.0
margin_bottom = 884.0
texture_normal = ExtResource( 12 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="BetSelect/4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "10K"
align = 1
valign = 1

[node name="5" type="TextureButton" parent="BetSelect"]
margin_left = 1208.0
margin_top = 784.0
margin_right = 1308.0
margin_bottom = 884.0
texture_normal = ExtResource( 6 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="BetSelect/5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "50K"
align = 1
valign = 1

[node name="Profile" type="Node2D" parent="."]
position = Vector2( 300, 820 )

[node name="Img" type="Sprite" parent="Profile"]
texture = ExtResource( 1 )

[node name="Frame" type="Sprite" parent="Profile"]
z_index = 1
texture = ExtResource( 4 )

[node name="Panel" type="Sprite" parent="Profile"]
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 120, -1.90735e-05 )
texture = ExtResource( 5 )

[node name="Nickname" type="Label" parent="Profile/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -30.0
margin_right = -60.0
margin_bottom = -80.0
custom_fonts/font = SubResource( 2 )
text = "Nickname"
align = 1
valign = 1

[node name="Balance" type="Label" parent="Profile/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_right = -60.0
margin_bottom = -50.0
custom_colors/font_color = Color( 0.917647, 0.909804, 0.529412, 1 )
custom_fonts/font = SubResource( 3 )
text = "3000"
align = 1
valign = 1

[node name="Bots" type="Node" parent="."]

[node name="Bot1" type="Node2D" parent="Bots"]
position = Vector2( 120, 180 )

[node name="Profile" type="Sprite" parent="Bots/Bot1"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Frame" type="Sprite" parent="Bots/Bot1"]
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Bots/Bot1"]
margin_left = -60.0
margin_top = 51.0
margin_right = 60.0
margin_bottom = 91.0
custom_styles/panel = SubResource( 4 )

[node name="Balance" type="Label" parent="Bots/Bot1/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0.917647, 0.909804, 0.529412, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Bot2" type="Node2D" parent="Bots"]
position = Vector2( 120, 340 )

[node name="Profile" type="Sprite" parent="Bots/Bot2"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Frame" type="Sprite" parent="Bots/Bot2"]
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Bots/Bot2"]
margin_left = -60.0
margin_top = 51.0
margin_right = 60.0
margin_bottom = 91.0
custom_styles/panel = SubResource( 4 )

[node name="Balance" type="Label" parent="Bots/Bot2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0.917647, 0.909804, 0.529412, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Bot3" type="Node2D" parent="Bots"]
position = Vector2( 120, 500 )

[node name="Profile" type="Sprite" parent="Bots/Bot3"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Frame" type="Sprite" parent="Bots/Bot3"]
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Bots/Bot3"]
margin_left = -60.0
margin_top = 51.0
margin_right = 60.0
margin_bottom = 91.0
custom_styles/panel = SubResource( 4 )

[node name="Balance" type="Label" parent="Bots/Bot3/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0.917647, 0.909804, 0.529412, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Bot4" type="Node2D" parent="Bots"]
position = Vector2( 1880, 180 )

[node name="Profile" type="Sprite" parent="Bots/Bot4"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Frame" type="Sprite" parent="Bots/Bot4"]
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Bots/Bot4"]
margin_left = -60.0
margin_top = 51.0
margin_right = 60.0
margin_bottom = 91.0
custom_styles/panel = SubResource( 4 )

[node name="Balance" type="Label" parent="Bots/Bot4/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0.917647, 0.909804, 0.529412, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Bot5" type="Node2D" parent="Bots"]
position = Vector2( 1880, 340 )

[node name="Profile" type="Sprite" parent="Bots/Bot5"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Frame" type="Sprite" parent="Bots/Bot5"]
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Bots/Bot5"]
margin_left = -60.0
margin_top = 51.0
margin_right = 60.0
margin_bottom = 91.0
custom_styles/panel = SubResource( 4 )

[node name="Balance" type="Label" parent="Bots/Bot5/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0.917647, 0.909804, 0.529412, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Bot6" type="Node2D" parent="Bots"]
position = Vector2( 1880, 500 )

[node name="Profile" type="Sprite" parent="Bots/Bot6"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Frame" type="Sprite" parent="Bots/Bot6"]
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Bots/Bot6"]
margin_left = -60.0
margin_top = 51.0
margin_right = 60.0
margin_bottom = 91.0
custom_styles/panel = SubResource( 4 )

[node name="Balance" type="Label" parent="Bots/Bot6/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0.917647, 0.909804, 0.529412, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Bot7" type="Node2D" parent="Bots"]
position = Vector2( 120, 660 )

[node name="Profile" type="Sprite" parent="Bots/Bot7"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Frame" type="Sprite" parent="Bots/Bot7"]
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Bots/Bot7"]
margin_left = -60.0
margin_top = 51.0
margin_right = 60.0
margin_bottom = 91.0
custom_styles/panel = SubResource( 4 )

[node name="Balance" type="Label" parent="Bots/Bot7/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0.917647, 0.909804, 0.529412, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Players" type="Node2D" parent="Bots"]
position = Vector2( 1880, 660 )

[node name="Profile" type="Sprite" parent="Bots/Players"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Frame" type="Sprite" parent="Bots/Players"]
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Bots/Players"]
margin_left = -60.0
margin_top = 51.0
margin_right = 60.0
margin_bottom = 91.0
custom_styles/panel = SubResource( 4 )

[node name="Balance" type="Label" parent="Bots/Players/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0.917647, 0.909804, 0.529412, 1 )
custom_fonts/font = SubResource( 5 )
text = "Players"
align = 1
valign = 1

[node name="CoinContainer" type="Node" parent="."]

[node name="Audio" type="Node" parent="."]

[node name="GameVoice" type="AudioStreamPlayer" parent="Audio"]
bus = "Effect"

[node name="CoinMove" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )
bus = "Effect"

[node name="History" type="Sprite" parent="."]
position = Vector2( 1031, 425 )
texture = ExtResource( 14 )

[node name="HBoxContainer" type="HBoxContainer" parent="History"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -550.0
margin_top = -50.0
margin_right = -700.0
margin_bottom = -100.0
custom_constants/separation = 0

[node name="BetArea" type="Node" parent="."]

[node name="Dragon" type="TextureButton" parent="BetArea"]
margin_left = 388.0
margin_top = 512.0
margin_right = 837.0
margin_bottom = 725.0

[node name="Total" type="Label" parent="BetArea/Dragon"]
margin_left = 234.0
margin_top = 145.0
margin_right = 334.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Me" type="Label" parent="BetArea/Dragon"]
margin_left = 335.0
margin_top = 145.0
margin_right = 435.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Pos" type="Node2D" parent="BetArea/Dragon"]
position = Vector2( 333, 107 )

[node name="Tie" type="TextureButton" parent="BetArea"]
margin_left = 850.0
margin_top = 512.0
margin_right = 1217.0
margin_bottom = 718.0

[node name="Pos" type="Node2D" parent="BetArea/Tie"]
position = Vector2( 184, 106 )

[node name="Total" type="Label" parent="BetArea/Tie"]
margin_left = 82.0
margin_top = 145.0
margin_right = 182.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Me" type="Label" parent="BetArea/Tie"]
margin_left = 183.0
margin_top = 145.0
margin_right = 283.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Tiger" type="TextureButton" parent="BetArea"]
margin_left = 1238.0
margin_top = 512.0
margin_right = 1670.0
margin_bottom = 725.0

[node name="Pos" type="Node2D" parent="BetArea/Tiger"]
position = Vector2( 129, 105 )

[node name="Total" type="Label" parent="BetArea/Tiger"]
margin_left = 9.0
margin_top = 145.0
margin_right = 109.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Me" type="Label" parent="BetArea/Tiger"]
margin_left = 110.0
margin_top = 145.0
margin_right = 210.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Exit" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 25 )
script = ExtResource( 3 )

[node name="BackDrop" parent="." instance=ExtResource( 30 )]
visible = false

[node name="C1" type="Sprite" parent="."]
position = Vector2( 938, -131.1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 31 )

[node name="C2" type="Sprite" parent="."]
position = Vector2( 1116, -131.1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 31 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/in = SubResource( 8 )

[node name="CoinHome" type="Node2D" parent="."]
position = Vector2( 1000, -80 )

[node name="AmountTransfer" type="Node2D" parent="."]
z_index = 1

[node name="0" type="Label" parent="AmountTransfer"]
margin_left = 480.0
margin_top = 560.0
margin_right = 650.0
margin_bottom = 610.0
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1

[node name="1" type="Label" parent="AmountTransfer"]
margin_left = 920.0
margin_top = 560.0
margin_right = 1090.0
margin_bottom = 610.0
custom_colors/font_color = Color( 1, 0.941176, 0.0431373, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1

[node name="2" type="Label" parent="AmountTransfer"]
margin_left = 1380.0
margin_top = 560.0
margin_right = 1550.0
margin_bottom = 610.0
custom_colors/font_color = Color( 1, 0.941176, 0.0431373, 1 )
custom_fonts/font = SubResource( 9 )
align = 1
valign = 1

[node name="Timer" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 488, 84 )
texture = ExtResource( 18 )

[node name="Label" type="Label" parent="Timer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -47.0
margin_right = -73.0
margin_bottom = -60.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Timer"]
anims/RESET = SubResource( 11 )
anims/play = SubResource( 12 )

[connection signal="pressed" from="BetSelect/0" to="." method="_on_bet_select" binds= [ 0 ]]
[connection signal="pressed" from="BetSelect/1" to="." method="_on_bet_select" binds= [ 1 ]]
[connection signal="pressed" from="BetSelect/2" to="." method="_on_bet_select" binds= [ 2 ]]
[connection signal="pressed" from="BetSelect/3" to="." method="_on_bet_select" binds= [ 3 ]]
[connection signal="pressed" from="BetSelect/4" to="." method="_on_bet_select" binds= [ 4 ]]
[connection signal="pressed" from="BetSelect/5" to="." method="_on_bet_select" binds= [ 5 ]]
[connection signal="pressed" from="BetArea/Dragon" to="." method="_on_bet" binds= [ 0 ]]
[connection signal="pressed" from="BetArea/Tie" to="." method="_on_bet" binds= [ 1 ]]
[connection signal="pressed" from="BetArea/Tiger" to="." method="_on_bet" binds= [ 2 ]]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
